# WatchHive

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
client/: client.py  pyproject.toml
watch-hive-frontend/: package-lock.json  package.json  sidepanel.html  tsconfig.json  vite.config.ts
watch-hive-frontend/public/: manifest.json
watch-hive-frontend/src/: App.tsx  background.js
